--- a/doc/Main.Rmd
+++ b/doc/Main.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Main"
+title: "Can you recognize the emotion from an image of a face?"
 author: "Jiancong Shen, Vikki Sui, Jinxu Xiang, Ruiqi Xie, Wenjie Xie"
 output:
   html_document:
@@ -8,7 +8,7 @@ output:
 
 ## Abstract
 
-This document mainly describes an improved way of expression recognition algorithm. This method reduces the calculation time and improves the classification accuracy by pre-transforming data, extracting efficient features (base on points and images). The goal is to select the best model by comparing the classification results of different classifiers under different features.
+This document mainly describes an improved way of emotion recognition algorithm. This method reduces the calculation time and improves the classification accuracy by pre-transforming data, extracting efficient features (base on points and images), and improving the algorithm. The goal is to select the best model by comparing the classification results of different classifiers under different features.
 
 ###  Computer configuration
 
@@ -34,13 +34,13 @@ RAM: 16.00 GB (2400 MHz)
 
 Based on the fact that the total training time is the sum of model training time, the feature extraction time, and the data processing time, we have the formula below:
 
-All training time = Data preprocessing time + Feature extraction time + Model training time
+All training time = Training data preprocessing time + Feature extraction time + Model training time
 
-All test time = Data preprocessing time + Feature extraction time + Test prediction time
+All test time = Testing data preprocessing time + Feature extraction time + Test prediction time
 
 The accuracy and time shown in the table above are from a certain measurement and may not exactly match the results shown in the PDF document.
 
-The improved feature contains 129 data extracted from 78 points' position. The color feature contains all improved feature and and 10 other feature which extracts from points and images. The dimension of color feature is 139.
+The improved feature contains 129 features extracted from 78 points' position. The color feature contains all improved feature and 10 other features which are extracted from points and images. Therefore, the total dimension of color feature is 139.
 
 We extract color feature and use the svm classifier as our improved model. Since there is no other results affect our judgment of in-class tests. We predict the final accuracy of in-class test to be 58%.
 
@@ -104,7 +104,7 @@ library(xgboost)
 
 ```{r , eval=FALSE}
 set.seed(1)
-setwd("C:/course/5243 Applied Data Science/Project/Spring2020-Project3-group8/doc")
+setwd("~/Documents/GitHub/Spring2020-Project3-group8/doc")
 # here replace it with your own path or manually set it in RStudio to where this rmd file is located. 
 # use relative path for reproducibility
 ```
@@ -148,15 +148,15 @@ run.train.svm = FALSE # run svm training model
 run.train.xgb = FALSE # run xgb training model
 ```
 
-The cross-validation method takes too much time, and the model we choose does not need it. Although it works well, we did not run it in this document.
+The cross-validation method takes too much time, and the final model we choose does not need it. Although it works well, we will not run cross-validation process in this document.
 
 ## Step 2: import data and train-test split 
 
-This time we did not use a random 20% photos as the test set, but instead randomized all the pictures of 20% of the people as the test set. Because when we face the problem of facial expression recognition, there is a high probability we encounter strangers. So the expectation of this selection method is closer to the real classification accuracy.
+This time we did not use a random 20% photos as the test set, but instead randomized all the pictures of 20% of the people as the test set. Because when we deal with the problem of facial expression recognition, there is a high probability of encountering strangers. So the expectation of this selection method is closer to the real classification accuracy.
 
-However, we only have 2500 pictures and 230 people, which is not enough for accurate training. So when we randomly select 20% of the people, it is likely that there is too little training for a certain expression in the training set. This may increase the variance of classification accuracy.
+However, we only have 2500 pictures and 230 people, which is not enough for accurate training. When we randomly select 20% of the people, it is likely that there is too little training data for a certain expression in the training set. This may increase the variance of classification accuracy.
 
-This effect is limited to the tests in this document. The tests in the classroom will use all 2,500 training sets, the expectations and variances mentioned above have nothing to do with it.
+This effect is limited to the tests in this document. The tests we need to do will use all 2,500 training sets, the expectations and variances mentioned above have nothing to do with it.
 
 ```{r}
 #train-test split
@@ -282,13 +282,13 @@ load("../output/distance.Rdata")
 
 + feature_baseline: function that represent the original features given by the distance of 78 points between each other 
 
-+ feature: function that takes the updated feature that were selected by ourselves
++ feature: function that takes the updated feature that were selected by ourselves, which has 129 dimensions if we exclude the color feature and 139 dimension if we include the color feature
   + feature function has a boolean input which indicate if we want to take color features or not
-  + color feature includes the darker folds color on the face
+  + color feature includes the wrinkle between eyes and the nasolabial folds
   + with the color feature, the running time will be longer but the predicting accuracy will increase
   + without the color feature, the running time will be shorter but the predicting acuuracy will decrease
 
-+ we also saved the features into the output folder
++ we will also the features into the output folder
 
 ```{r}
 source("../lib/feature_baseline.R")
@@ -342,7 +342,7 @@ if(run.feature.test){
 
 ## Step 4: Train a classification model with training features and responses
 
-In this step, we will construct the train model using GBM, SVM, and XGB, respectively using baseline features, improved features and improved features with color features to get the training model, then saved these model to the output folder.
+In this step, we will train the model using GBM, SVM, and XGB, respectively using baseline features, improved features and improved features with color features to get the training model, then save these model to the output folder.
 
 ### 1.Baseline model with dist feature in GBM
 
@@ -525,7 +525,7 @@ if(run.train.xgb){
 
 ## Step 5: Run test on test images
 
-For each model we constructed, we use that model on the test set and give a confusion matrix and predicting accuracy repectively. 
+For each model we constructed, we use that model to make prediction on the test set, then we give the confusion matrix of the prediction and the predicting accuracy repectively. 
 
 ### 1.Baseline model with dist feature in GBM
 
@@ -746,7 +746,7 @@ g_accuracy_test
 
 ### Summarize Running Time
 
-Prediction performance matters, so does the running times for constructing features and for training the model, especially when the computation resource is limited. 
+Prediction performance matters, so does the running times for constructing features and for training the model, especially when the computation resource is limited, we would want a model woth relatively high accuracy and relatively low running time. 
 
 ```{r}
 load("../output/tm.run.all_points.RData")
@@ -838,7 +838,7 @@ if(run.baseline){
 
 ```
 
-#### Train time without feature extraction
+#### Training time without feature extraction
 
 ```{r}
 #plot the train time without feature extraction
@@ -853,7 +853,7 @@ ggsave("../figs/g_time_train.jpg", plot = g_time_train)
 g_time_train
 ```
 
-#### Train time with feature extraction
+#### Training time with feature extraction
 
 ```{r}
 #plot the train time with feature extraction
